--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -190,6 +190,7 @@ p {
 .navigation__element__link {
     line-height: 160%;
     color: var(--color-nav);
+    transition: 1s;
 }
 
      @media (max-width: 767px) {
@@ -311,6 +312,7 @@ p {
     letter-spacing: 0.06em;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    transition: 1s;
 }
 
     @media (max-width: 1279px) {
@@ -530,6 +532,7 @@ p {
     background-position: center;
     background-repeat: no-repeat;
     background-color: transparent;
+    transition: 0.5s;
 }
 
 .slider-wrapper_arrow:hover {
@@ -620,6 +623,7 @@ p {
     align-items: center;
     background-color: var(--color-nav-active);
     border-radius: 9px;
+    transition: 0.5s;
 }
 
     @media (max-width: 1279px) {
@@ -672,6 +676,7 @@ p {
     letter-spacing: 0.06em;
     color: var(--color-dark);
     background-color: transparent;
+    transition: 0.5s;
 }
 
 .our-friends__button {
@@ -690,6 +695,7 @@ p {
     color: var(--color-dark);
     background-color: var(--color-primary);
     border-radius: 100px;
+    transition: 0.5s;
 }
 
     @media (max-width: 767px) {
@@ -941,6 +947,7 @@ p {
     border-radius: 9px;
     position: relative;
     margin-bottom: 20px;
+    transition: 1s;
 }
 
     @media (max-width: 767px) {
@@ -968,6 +975,7 @@ p {
     line-height: 115%;
     letter-spacing: 0.06em;
     color: var(--color-dark-title);
+    transition: 1s;
 }
 
     @media (max-width: 767px) {
@@ -982,6 +990,10 @@ p {
 .in-addition__link:hover {
     cursor: pointer;
     background-color: var(--color-primary-light);
+}
+
+.navigation__element__link.active {
+    cursor: default;
 }
 
 .in-addition__text {
