--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -190,7 +190,7 @@ p {
 .navigation__element__link {
     line-height: 160%;
     color: var(--color-nav);
-    transition: 1s;
+    transition: 0.5s;
 }
 
      @media (max-width: 767px) {
@@ -209,6 +209,11 @@ p {
 .navigation__element__link:hover {
     color: var(--color-nav-active);
     cursor: pointer;
+}
+
+.navigation__element__link.active:hover {
+    color: var(--color-nav-active);
+    cursor: default;
 }
 
 .not-only {
@@ -990,10 +995,6 @@ p {
 .in-addition__link:hover {
     cursor: pointer;
     background-color: var(--color-primary-light);
-}
-
-.navigation__element__link.active {
-    cursor: default;
 }
 
 .in-addition__text {
