--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -543,6 +543,7 @@ p {
 .slider-wrapper_arrow:hover {
     cursor: pointer;
     background-color: var(--color-primary-light);
+    border-color: var(--color-primary-light);
 }
 
 .arrow-left {
@@ -649,10 +650,6 @@ p {
     background-color: var(--color-white);
     box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
 }
-.card:hover .card__button{
-    cursor: pointer;
-    background-color: var(--color-primary-light);
-}
 
 .card__title {
     margin: 30px auto;
@@ -672,7 +669,7 @@ p {
     height: 52px;
     margin-bottom: 30px;
     border: 2px solid var(--color-primary);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
     border-radius: 100px;
     font-family: 'Georgia';
     font-style: normal;
@@ -682,6 +679,13 @@ p {
     color: var(--color-dark);
     background-color: transparent;
     transition: 0.5s;
+}
+
+.card:hover .card__button{
+    cursor: pointer;
+    background-color: var(--color-primary-light);
+    border-color: var(--color-primary-light);
+    
 }
 
 .our-friends__button {
