--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -313,11 +313,6 @@ p {
     box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
 }
 
-.card:hover .card__button{
-    cursor: pointer;
-    background-color: var(--color-primary-light);
-}
-
 .card__title {
     margin: 30px auto;
     font-family: 'Georgia';
@@ -336,7 +331,7 @@ p {
     height: 52px;
     margin-bottom: 30px;
     border: 2px solid var(--color-primary);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
     border-radius: 100px;
     font-family: 'Georgia';
     font-style: normal;
@@ -346,6 +341,12 @@ p {
     color: var(--color-dark);
     background-color: transparent;
     transition: 0.5s;
+}
+
+.card:hover .card__button{
+    cursor: pointer;
+    background-color: var(--color-primary-light);
+    border-color: var(--color-primary-light); 
 }
 
 .slider-buttons {
@@ -391,6 +392,7 @@ p {
 .slider-button:nth-child(5):hover{
     cursor: pointer;
     background-color: var(--color-primary-light);
+    border-color: var(--color-primary-light);
 }
 
 .slider_button_active {
