--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -346,7 +346,7 @@ p {
 .card:hover .card__button{
     cursor: pointer;
     background-color: var(--color-primary-light);
-    border-color: var(--color-primary-light); 
+    border:2px solid var(--color-primary-light); 
 }
 
 .slider-buttons {
@@ -392,7 +392,7 @@ p {
 .slider-button:nth-child(5):hover{
     cursor: pointer;
     background-color: var(--color-primary-light);
-    border-color: var(--color-primary-light);
+    border: 2px solid var(--color-primary-light);
 }
 
 .slider_button_active {
