--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -383,10 +383,10 @@ p {
     border: 2px solid var(--color-nav);
 }
 
-.slider-button:nth-child(4):hover,
+/* .slider-button:nth-child(4):hover,
 .slider-button:nth-child(5):hover {
     background-color: transparent;
-}
+}  */
 
 .slider-button:nth-child(4):hover,
 .slider-button:nth-child(5):hover{
