--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -91,10 +91,7 @@ p {
     }
 
 .header {
-    position: sticky;
-    top: 0;
     background-color: var(--color-white);
-    z-index: 10;
     padding: 30px 0;
     height: 120px;
 } 
@@ -267,18 +264,26 @@ p {
     @media (max-width: 1279px) {
         .cards-container {
             padding: 0;
-            grid-template-columns: repeat(2, 270px);
-            width: 580px;
+            grid-template-columns: repeat(3, 270px);
+            justify-items: center;
+            justify-content: center;
+            align-items: center;
             margin: 0 auto;
             margin-bottom: 40px;
         }
     }
 
-    @media (max-width: 767px) {
+    @media (max-width: 920px) {
         .cards-container {
-            padding: 0;
+            grid-template-columns: repeat(2, 270px);
+            margin: 0 auto;
+            margin-bottom: 40px;
+        }
+    }
+
+    @media (max-width: 610px) {
+        .cards-container {
             grid-template-columns: repeat(1, 270px);
-            width: 270px;
             margin: 0 auto;
             margin-bottom: 42px;
         }
