--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -67,7 +67,8 @@ p {
     font-size: var(--font3);
     font-family: 'Arial';
     font-size: 15px;
-    font-weight: 400;   
+    font-weight: 400; 
+    position: relative;  
 }
 
 .wrapper {
@@ -613,4 +614,19 @@ p {
 
 .hidden {
     overflow: hidden;
+}
+
+.overlay::before {
+    content: '';
+    position: fixed;
+    width: 100%; 
+    height: 100%; 
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color:  rgba(0,0,0,0.5);
+    z-index: 2;
+    width:100%;
+    height: 100%;
 }
