feat: add popup layout

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -1359,3 +1359,110 @@ p {
     width:100%;
     height: 100%;
 }
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(41, 41, 41, 0.6);
+}
+
+.popup__body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100%;
+}
+
+.popup__content {
+    width: 900px;
+    height: 500px;
+    color: #000000;
+    position: relative;
+    background-color: var(--color-white);
+    display: flex;
+    justify-content: row;
+    gap: 29px;
+    border-radius: 9px;
+
+}
+
+.popup__close {
+    position: absolute;
+    width: 52px;
+    height:53px;
+    border: 2px solid var(--color-primary);
+    border-radius: 50%;
+    right: -42px;
+    top: -52px;
+}
+
+.popup__image {
+    width: 500px;
+    height: 500px;
+}
+
+.popup__image-picture {
+    height: 100%;
+}
+
+.popup__text {
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    padding-right: 20px;
+}
+
+.popup__text-title{
+    font-size: 35px;
+    line-height: 130%;
+    margin-top: 50px;
+    letter-spacing: 0.06em;
+}
+
+.popup__text-subtitle {
+    font-size: 20px;
+    line-height: 115%;
+    margin-top: 10px;
+    letter-spacing: 0.06em;
+}
+
+.popup__text-description {
+    margin-top: 40px;
+    letter-spacing: 6%;
+    line-height: 17px;
+}
+
+.popup__text-list {
+    margin-top: 43px;
+    list-style: none;
+    padding-left: 14px;
+}
+
+.popup__text-list-element {
+    margin-top: 10px;
+    position: relative;
+    line-height: 16.5px;
+    letter-spacing: 1px;
+}
+
+.popup__text-list-element::before {
+    content: "";
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    top: 50%;
+    left: -14px;
+    background-color: var(--color-primary);
+    border-radius: 50%;
+}
+
+.list-elem__bold {
+    font-weight: 900;
+    letter-spacing: 2px;
+}
