--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -1370,6 +1370,7 @@ p {
     width: 100%;
     height: 100%;
     background-color: rgba(41, 41, 41, 0.6);
+    padding: 55px;
 }
 
 .popup__body {
@@ -1380,17 +1381,24 @@ p {
 }
 
 .popup__content {
-    width: 900px;
-    height: 500px;
+    max-width: 900px;
+    max-height: 500px;
     color: #000000;
     position: relative;
     background-color: var(--color-white);
     display: flex;
-    justify-content: row;
+    flex-direction: row;
     gap: 29px;
     border-radius: 9px;
-
 }
+
+
+    @media (max-width: 767px) {
+        .popup__content {
+            flex-direction: column;
+            max-height: 90%;
+        }
+    }
 
 .popup__close {
     position: absolute;
@@ -1400,12 +1408,53 @@ p {
     border-radius: 50%;
     right: -42px;
     top: -52px;
+    transition: all;
+    transition-duration: 1s;
+}
+
+    @media (max-width: 767px) {
+        .popup__close {
+            right: 0;
+        }
+    }
+
+.popup__close:hover {
+    background-color: var(--color-primary-light);
+}
+
+.popup__close-img {
+    transition: all;
+    transition-duration: 0.5s;
+}
+
+.popup__close-animation {
+    transform: scale(1.5);
 }
 
 .popup__image {
     width: 500px;
     height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
 }
+
+    @media (max-width: 949px) {
+        .popup__image {
+            width: 350px;
+            height: 350px
+        }
+    }
+
+    @media (max-width: 767px) {
+        .popup__image {
+            width: 250px;
+            height: 250px;
+        }
+    }
+
+
 
 .popup__image-picture {
     height: 100%;
@@ -1418,15 +1467,21 @@ p {
     font-size: 15px;
     line-height: 110%;
     letter-spacing: 0.06em;
-    padding-right: 20px;
+    padding: 20px;
 }
 
 .popup__text-title{
     font-size: 35px;
     line-height: 130%;
-    margin-top: 50px;
+    margin-top: 30px;
     letter-spacing: 0.06em;
 }
+
+    @media (max-width: 949px) {
+        .popup__text-title {
+            margin-top: 0px;
+        }
+    }
 
 .popup__text-subtitle {
     font-size: 20px;
@@ -1435,17 +1490,30 @@ p {
     letter-spacing: 0.06em;
 }
 
+
 .popup__text-description {
     margin-top: 40px;
     letter-spacing: 6%;
     line-height: 17px;
 }
 
+    @media (max-width: 949px) {
+        .popup__text-description {
+            margin-top: 20px;
+        }
+    }
+
 .popup__text-list {
     margin-top: 43px;
     list-style: none;
     padding-left: 14px;
 }
+
+    @media (max-width: 949px) {
+        .popup__text-list {
+            margin-top: 23px;
+        }
+    }
 
 .popup__text-list-element {
     margin-top: 10px;
