--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -723,7 +723,7 @@ p {
     transition: 0.5s;
 }
 
-    /* @media (max-width: 1279px) {
+    @media (max-width: 1279px) {
         .card:last-child {
             display: none;
         }
@@ -733,7 +733,7 @@ p {
         .card:nth-of-type(n+2) {
             display: none;
         }
-    } */
+    } 
 
 
 .card:hover {
