--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -301,7 +301,7 @@ p {
     transition: 0.5s;
 }
 
-    @media (max-width: 1279px) {
+    /* @media (max-width: 1279px) {
         .card:nth-last-child(-n+2){
             display: none;
         }
@@ -311,7 +311,7 @@ p {
         .card:nth-of-type(n+4){
             display: none;
         }
-    }
+    } */
 
 .card:hover {
     cursor:pointer;
@@ -355,7 +355,7 @@ p {
     border:2px solid var(--color-primary-light); 
 }
 
-.slider-buttons {
+.pagination-buttons {
     display: flex;
     gap: 20px;
     margin: 0 auto;
@@ -363,13 +363,13 @@ p {
 }
 
     @media (max-width: 767px) {
-        .slider-buttons {
+        .pagination-buttons {
             width: 300px;
             gap: 10px;
         }
     }
 
-.slider-button {
+.pagination-button {
     font-family: 'Georgia';
     font-style: normal;
     font-weight: 400;
@@ -384,7 +384,7 @@ p {
     transition: 0.5s;
 }
 
-.slider-button_disabled {
+.pagination-button_disabled {
     color: var(--color-nav);
     border: 2px solid var(--color-nav);
 }
@@ -394,14 +394,13 @@ p {
     background-color: transparent;
 }  */
 
-.slider-button:nth-child(4):hover,
-.slider-button:nth-child(5):hover{
+.pagination-button:hover{
     cursor: pointer;
     background-color: var(--color-primary-light);
     border: 2px solid var(--color-primary-light);
 }
 
-.slider_button_active {
+.button-active {
     background-color: var(--color-primary);
 }
 
