--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -384,10 +384,6 @@ p {
     transition: 0.5s;
 }
 
-.pagination-button_disabled {
-    color: var(--color-nav);
-    border: 2px solid var(--color-nav);
-}
 
 /* .slider-button:nth-child(4):hover,
 .slider-button:nth-child(5):hover {
@@ -398,6 +394,17 @@ p {
     cursor: pointer;
     background-color: var(--color-primary-light);
     border: 2px solid var(--color-primary-light);
+}
+
+.pagination-button_disabled {
+    color: var(--color-nav);
+    border: 2px solid var(--color-nav);
+}
+
+.pagination-button_disabled:hover{
+    cursor: default;
+    border: 2px solid var(--color-nav);
+    background-color: transparent;
 }
 
 .button-active {
